href of types of food specified

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               Crispy pastries with fresh thyme, olive oil, fresh rocca leaves
               and mint
             </p>
-            <a class="btn buy" href="#">add to cart</a>
+            <a class="btn buy" href="#food">add to cart</a>
           </div>
         </div>
         <div class="food 2">
@@ -93,7 +93,7 @@
             <p>
               Crispy pastries stuffed with white cheese with soft parsley leaves
             </p>
-            <a class="btn buy" href="#">add to cart</a>
+            <a class="btn buy" href="#food">add to cart</a>
           </div>
         </div>
         <div class="food 3">
@@ -104,7 +104,7 @@
             <p>
               Crispy pastries stuffed with fresh meat and pomegranate molasses
             </p>
-            <a class="btn buy" href="#">add to cart</a>
+            <a class="btn buy" href="#food">add to cart</a>
           </div>
         </div>
       </div>
