header tags redesigned

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <section id="about-us">
       <div class="about-us container">
         <div class="about-text">
-          <p class="small">About Us</p>
-          <h2>We've been Making Delicious Food For Last 50 Years</h2>
+          <h2 class="small">About Us</h2>
+          <h3>We've been Making Delicious Food For Last 50 Years</h3>
           <p>
             Arab cuisine is the cuisine of the Arabs, defined as the various
             regional cuisines spanning the Arab world, from the Maghreb to the
@@ -70,7 +70,7 @@
     </section>
 
     <section id="food">
-      <h1>Types of Food</h1>
+      <h2>Types of Food</h2>
 
       <div class="food-container container">
         <div class="food 1">
@@ -111,7 +111,7 @@
     </section>
 
     <section id="food-menu">
-      <h1>FOOD MENU</h1>
+      <h2>FOOD MENU</h2>
 
       <div class="menu-wrapper container">
         <div class="food-menu m1">
