footer-content updated, removed it from h2 and used used p tag for footer text

--- a/index.html
+++ b/index.html
@@ -317,9 +317,7 @@
     </section>
 
     <footer id="footer">
-      <div class="footer">
-        <h2>Restaurant Website &#169 2023, all rights reserved</h2>
-      </div>
+       <p class="footer content"> Restaurant Website &#169 2023, all rights reserved </p>     
     </footer>
 
     <!--######For smooth scrolling code copied from weschool as i don't know javascript######-->
