applied visuals to contact-us form

--- a/index.html
+++ b/index.html
@@ -291,20 +291,21 @@
         <div class="contact-us-form">
           <h3>Contact Us</h3>
 
-          <form action="#">
+          <form action="backend.php">
             <div class="name area">
-              <input type="text" name="" id="" placeholder="Name" />
+              Name<input type="text" name="" id="" placeholder="Enter your name" />
             </div>
             <div class="email area">
-              <input type="email" name="" id="" placeholder="Email" />
+              Email<input type="email" name="" id="" placeholder="Enter your email address" />
             </div>
             <div class="form area">
+              <p>Tell us your concern</p>
               <textarea
                 name=""
                 id=""
                 cols="30"
                 rows="10"
-                placeholder="Type Your Message Here"
+                placeholder="Type your message here"
               ></textarea>
             </div>
 
