added social logo's in footer

--- a/index.html
+++ b/index.html
@@ -318,7 +318,20 @@
     </section>
 
     <footer id="footer">
-       <p class="footer content"> Restaurant Website &#169 2023, all rights reserved </p>     
+       <div class="footer-container">
+        <div class="copy-right">
+          <h3>Restaurant Website &#169 2023, all rights reserved</h3>
+        </div>
+        <div class="social">
+
+          <ul>
+            <li><i class="fa-brands fa-twitter"></i><a href=""></a></li>
+            <li><i class="fa-brands fa-linkedin"></i><a href=""></a></li>
+            <li><i class="fa-brands fa-instagram"></i><a href=""></a></li>
+          </ul>
+          
+        </div>
+       </div>   
     </footer>
 
     <!--######For smooth scrolling code copied from weschool as i don't know javascript######-->
