removed grids and reused flex-boxes and made Food-Menu heavily responsive

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="about-food">
           <h3>Boneless Chicken</h3>
-          <p>Half of grilled Boneless chicken</p>
+          <p>Half of grilled Boneless chicken with Fries</p>
           <a class="btn buy2" href="">PRICE: &#8377; 1400</a>
         </div>
       </div>
