all changes recommended by Murtaza and Osama were applied

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </p>
       </div>
       <div class="about-img">
-        <img src="./images/camel-meat.jpg" alt="" />
+        <img src="./images/camel-meat.jpg" alt="camel-biryani" />
       </div>
     </div>
   </section>
@@ -69,7 +69,7 @@
 
     <div class="food-container container">
       <div class="food 1">
-        <img src="./images/zaatar.jpg" alt="" />
+        <img src="./images/zaatar.jpg" alt="Zaatar-Fatayar" />
 
         <div class="merge">
           <h3>Zaatar</h3>
@@ -81,7 +81,7 @@
         </div>
       </div>
       <div class="food 2">
-        <img src="./images/cheese-fatayar.jpg" alt="" />
+        <img src="./images/cheese-fatayar.jpg" alt="Cheese-Fatayar" />
 
         <div class="merge">
           <h3>Cheese Fatayer</h3>
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="food 3">
-        <img src="./images/Lamb-Fatayer.jpg" alt="" />
+        <img src="./images/Lamb-Fatayer.jpg" alt="Lamb-Fatayer" />
 
         <div class="merge">
           <h3>Lamb Fatayer</h3>
@@ -159,7 +159,7 @@
 
       <div class="food-menu m5">
         <div class="food-img">
-          <img src="./images/Lamb-Shashlik.jpg" alt="" />
+          <img src="./images/Lamb-Shashlik.jpg" alt="Lamb-Shashlik" />
         </div>
         <div class="about-food">
           <h3>Lamb Shashlik</h3>
@@ -258,14 +258,14 @@
 
         <form action="backend.php">
           <div class="name area">
-            Name<input type="text" name="" id="" placeholder="Enter your name" />
+            Name<input type="text"  placeholder="Enter your name" />
           </div>
           <div class="email area">
-            Email<input type="email" name="" id="" placeholder="Enter your email address" />
+            Email<input type="email"  placeholder="Enter your email address" />
           </div>
           <div class="form area">
             <p>Tell us your concern</p>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Type your message here"></textarea>
+            <textarea cols="30" rows="10" placeholder="Type your message here"></textarea>
           </div>
 
           <div class="submit area">
